[project]
    name            = "LangDojo"
    version         = "0.1.0"
    description     = "LangDojo is a tool for exploring the capabilities of LLMs."
    readme          = "README.md"
    requires-python = ">=3.12"
    dependencies    = ["openai>=1.58.1", "rich>=13.9.3"]

[dependency-groups]
    dev = ["pre-commit>=4.0.1", "pytest>=8.3.3", "ruff>=0.7.1"]
